# Flutter_-FFI

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/lifi_reciever/: MainActivity.kt
c_plugin/: ffigen.yaml  pubspec.yaml
c_plugin/android/: build.gradle  local.properties  settings.gradle
c_plugin/android/src/main/: AndroidManifest.xml
c_plugin/android/src/main/cpp/: CMakeLists.txt  openCvFunctions.cpp
c_plugin/example/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
c_plugin/example/android/: local.properties
c_plugin/example/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
c_plugin/example/lib/: main.dart
c_plugin/lib/: c_plugin.dart  c_plugin_bindings_generated.dart
c_plugin/src/: CMakeLists.txt  c_plugin.cpp  c_plugin.h  c_plugin_api.h
esp32Code/: esp32Code.ino
esp32Codenew/: esp32Codenew.ino
esp32Codenew/fully_working/: fully_working.ino
esp32Codenew/june_5_12_12/: june_5_12_12.ino
esp32Codenew/june_5_1_28/: june_5_1_28.ino
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/Detection/: auto_detection_page.dart  detection.dart  detectionTest.dart  detection_page.dart  graphDraw.dart
lib/Home/: homeScreen.dart
lib/controllers/: connectionController.dart
lib/reciever/: recieverScreen.dart
lib/splashScreen/: splashScreen.dart
lib/transmeter/: transmeterLogic.dart  transmeterScreen.dart
test/: widget_test.dart
